--- a/tiestyle.css
+++ b/tiestyle.css
@@ -25,9 +25,9 @@ border-radius: 3px;
 	background-color: grey;
     border-width: 3px;
     border-color: blue;
-	margin: .7% 0% 0% 18.99%;
+	margin: .7% 0% 0% 18.60%;
 	position: absolute;
-	
+	font-size: 89%;
 
 }
 
@@ -37,6 +37,7 @@ border-radius: 3px;
     border-width: 3px;
     border-color: blue;
 	margin: .7% 0% 0% 29.99%; 
+	font-size: 89%;
 }
 
 .header_span4 {
@@ -44,7 +45,8 @@ border-radius: 3px;
 	position: absolute;
     border-width: 3px;
     border-color: blue;
-	margin: .7% 0% 0% 39.99%; 
+	margin: .7% 0% 0% 41.35%; 
+	font-size: 89%;
 }
 
 
@@ -54,7 +56,8 @@ border-radius: 3px;
 	position: absolute;
     border-width: 3px;
     border-color: blue;
-	margin: .7% 0% 0% 49.99%; 
+	margin: .7% 0% 0% 53.39%; 
+    font-size: 89%;
 }
 /*main  "Skinny ties" navbar css
 */ 
@@ -64,35 +67,46 @@ border-radius: 3px;
     height: 100px; 
 }
 
+
 .skinnytielogo {
 	display: inline;
-	right: 0px
+	
 	width: 40px;
 	height: 100px;
 	background-color: grey;
-	margin-top: 30px;
+	margin-left: 9.01%;
+
+
+}
+
+.skinnytielogo_img {
+
+	max-width: 110px;
 }
 
 .navbuttons {
 
 	float: right;
 	background-color: blue;
-	min-height: 80px;
-	margin-right: 5%;
+	margin-top: 3vw;
+	margin-right: 2.5%;
+	font-size: 121%;
 }
 
 .navbutton_pattern {
 
 	float: right;
 	background-color: blue;
-	min-height: 80px;
-	margin-right: 10z%;
+    margin-top: 3vw;
+	margin-right: 17%;
+	font-size: 121%;
 }
 
 .search-cart_div {
 
-	float: right;
-	background-color: grey;
+	float: right; 
+	margin-top: .72%; 
+	margin-right: 7.2%;   
 }
 
 
@@ -100,13 +114,73 @@ border-radius: 3px;
 
 	float: right;
 	background-color: #D4AED8;
+	margin-top: 2vw;
+	position: relative;
 }
 
 .navbar_shoppingcart {
 
 	float: right;
-	background-color: blue;
+	background-color: white;
+	border-color: black;
+	margin-top: 3vw;
+	margin-right: 1vw;
+    width: 45px;
+    height: 20px;
+    border: 1px solid #E8E8E8;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    padding-left: 9%;
+   position: relative;
+
+  }
+
+  
+.sprite1 {
+	background: url('imgs/sprite@2x.png') no-repeat -90px -2px;
+	width: 28px;
+	height: 28px;
+	position: absolute;
+	zoom: .5;
+	top: 20%;
+
+	left: 2px;
 }
+
+
+.navbar_signin_register_text
+{   position: absolute;
+	color: lightgrey;
+	top: -10px;
+	font-size: 60%;
+
+}
+
+.navbar_searchbar {
+	margin-top: 6%;
+
+}
+.sprite { 
+	background: url('imgs/sprite@2x.png') no-repeat -30px 0;
+	width: 26px;
+	height: 26px;
+	position: absolute;
+	top: 40%;
+	left: 3%;
+	zoom: .5;
+	border-color: transparent;
+}
+
+.searchbar {
+	padding-left: 20px;
+	height: 19px;
+	width: 70%;
+	border: 2px solid #E8E8E8;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+
+}
+
 
 
 .tiebar_display_div {
